--- a/index.html
+++ b/index.html
@@ -362,15 +362,13 @@
       </div>
     </div-->
 
-    <div class="site-section bg-image overlay" style="background-image: url('images/hero_1.jpg');">
+    <div class="site-section bg-image overlay" style="background-image: url('images/computer.jpg');">
       <div class="container">
         <div class="row justify-content-center align-items-center">
           <div class="col-md-8 text-center testimony">
-            <img src="images/person_4.jpg" alt="Image" class="img-fluid w-25 mb-4 rounded-circle">
-            <h3 class="mb-4">Jerome Jensen</h3>
-            <blockquote>
-              <p>&ldquo; Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum rem soluta sit eius necessitatibus voluptate excepturi beatae ad eveniet sapiente impedit quae modi quo provident odit molestias! Rem reprehenderit assumenda &rdquo;</p>
-            </blockquote>
+            <img src="images/logo_prova_3.png" alt="Image" class="img-fluid w-25 mb-4 rounded-circle">
+            <h3 class="mb-4">Chi siamo</h3>
+              <p>Formata come associazione studentesca riconosciuta dall'Università La Sapienza di Roma nel 2019, ci siamo fusi da due entità separate preesistenti: il <a href="https://lugsapienza.altervista.org/">Linux User Group Sapienza</a>, ed il <a href="https://kitsune_rp.gitlab.io">Kitsune Reasearch Project</a>. </p>
           </div>
         </div>
       </div>
@@ -451,10 +449,10 @@
             <h3 class="section-title mb-3">Social media</h3>
 
             <ul class="icons">
-                            <li><a href="http://www.facebook.com/kitsuneresearchproject"><img src="images/fb.png" alt="" height="36" width="36"></a></li>
-                            <li><a href="http://www.twitter.com/KitsuneResearch"><img src="images/tw.png" alt="" height="36" width="36"></a></li>
+                            <li><a href="http://www.facebook.com/sapdigitalgroup"><img src="images/fb.png" alt="" height="36" width="36"></a></li>
+                            <li><a href="http://www.twitter.com/"><img src="images/tw.png" alt="" height="36" width="36"></a></li>
                             <li><a href="https://www.youtube.com/channel/UC6eaMcJbOR4wo0jveRXXoVA"><img src="images/youtube.png" alt="" height="36" width="48"></a></li>
-                            <li><a href="https://www.gitlab.com/kitsune_rp"><img src="images/gitlab.png" alt="" height="36" width="36"></a></li>
+                            <li><a href="https://www.github.com/sapienzadigitalgroup"><img src="images/github-dark.png" alt="" height="36" width="36"></a></li>
                             <li><a href="https://mega.nz/#F!be4FnCjb!91eG5mweAKObd-ip2lniFQ"><img src="images/mega-logo-nz-2.png" alt="" height="36" width="36"></a></li>
                             <li><a href="https://t.me/kitsuneresearchproject"><img src="images/telegram.png" alt="" height="36" width="36"></a></li>
                             <li><a href="https://www.linkedin.com/company/kitsune-research-project"><img src="images/In-2C-34px-TM.png" alt="" ></a></li>
@@ -519,7 +517,7 @@
               <li><a href="#">Twitter</a></li>
               <li><a href="#">Instagram</a></li>
               <li><a href="#">GitHub</a></li>
-              <li><a href="https://t.me/sapdigitalgroup">Canale Telegram</a></li>
+              <li><a href="https://t.me/sapienzadigitalgroup">Canale Telegram</a></li>
             </ul>
           </div>
 
