--- a/index.html
+++ b/index.html
@@ -450,11 +450,11 @@
 
             <ul class="icons">
                             <li><a href="http://www.facebook.com/sapdigitalgroup"><img src="images/fb.png" alt="" height="36" width="36"></a></li>
-                            <li><a href="http://www.twitter.com/"><img src="images/tw.png" alt="" height="36" width="36"></a></li>
+                            <li><a href="http://www.twitter.com/sapdigitalgroup"><img src="images/tw.png" alt="" height="36" width="36"></a></li>
                             <li><a href="https://www.youtube.com/channel/UC6eaMcJbOR4wo0jveRXXoVA"><img src="images/youtube.png" alt="" height="36" width="48"></a></li>
                             <li><a href="https://www.github.com/sapienzadigitalgroup"><img src="images/github-dark.png" alt="" height="36" width="36"></a></li>
                             <li><a href="https://mega.nz/#F!be4FnCjb!91eG5mweAKObd-ip2lniFQ"><img src="images/mega-logo-nz-2.png" alt="" height="36" width="36"></a></li>
-                            <li><a href="https://t.me/kitsuneresearchproject"><img src="images/telegram.png" alt="" height="36" width="36"></a></li>
+                            <li><a href="https://t.me/sapienzadigitalgroup"><img src="images/telegram.png" alt="" height="36" width="36"></a></li>
                             <li><a href="https://www.linkedin.com/company/kitsune-research-project"><img src="images/In-2C-34px-TM.png" alt="" ></a></li>
            </ul>
 
@@ -514,9 +514,9 @@
             <h3>Link</h3>
             <ul class="list-unstyled footer-links">
               <li><a href="https://www.facebook.com/sapdigitalgroup/">Facebook</a></li>
-              <li><a href="#">Twitter</a></li>
-              <li><a href="#">Instagram</a></li>
-              <li><a href="#">GitHub</a></li>
+              <li><a href="https://www.twitter.com/sapdigitalgroup/">Twitter</a></li>
+              <li><a href="https://www.instagram.com/sapienzadigitalgroup">Instagram</a></li>
+              <li><a href="https://www.github.com/sapienzadigitalgroup">GitHub</a></li>
               <li><a href="https://t.me/sapienzadigitalgroup">Canale Telegram</a></li>
             </ul>
           </div>
